correction on url

--- a/static/public/quiz/index.html
+++ b/static/public/quiz/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <div id="app"></div>
-    <script type="text/javascript" src="http://localhost:7800/kzs/public/quiz/js/QUIZ_QUESTIONS.json"></script>
+    <script type="text/javascript" src="https://api.messengerbot.si/kzs/public/quiz/js/QUIZ_QUESTIONS.json"></script>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
@@ -27,6 +27,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
-    <script type="text/babel" src="http://localhost:7800/kzs/public/quiz/js/index.js"></script>
+    <script type="text/babel" src="https://api.messengerbot.si/kzs/public/quiz/js/index.js"></script>
 </body>
 </html>
